--- a/examples/user-dashboard/.webpackrc
+++ b/examples/user-dashboard/.webpackrc
@@ -1,16 +1,18 @@
 {
   "theme": {
-    "@primary-color": "#dc6aac",
-    "@link-color": "#dc6aac",
+    /* "@primary-color": "#dc6aac",
+    "@link-color": "#dc6aac", */
     "@border-radius-base": "2px",
-    "@font-size-base": "16px",
+    "@font-size-base": "14px",
     "@line-height-base": "1.2"
   },
   "proxy": {
     "/api": {
-      "target": "http://jsonplaceholder.typicode.com/",
-      "changeOrigin": true,
-      "pathRewrite": { "^/api" : "" }
+      /*"target": "http://jsonplaceholder.typicode.com/",*/
+      /* indicates any kubernates apiserver */
+      "target": "http://192.168.36.107:8080/",
+      "changeOrigin": true
+      /*"pathRewrite": { "^/api" : "" }*/
     }
   }
 }
